

2022-05-x [8.0.6]
--------------------------------------------------
bmxd                      - reduce dead-node timeout
                          - update routes immediately after removing next-hop node
                          - remove bat0 tunnel stuff (safes 20kbyte)
community                 - add Leipzig
router                    - add TP-Link Archer C50
gui                       - speed up
backbone                  - process port number when requesting backbone parameters


2022-04-x [8.0.5]
--------------------------------------------------
wifi                      - fix 2.4ghz band selection for Aerohive router


2022-04-x [8.0.4]
--------------------------------------------------
firewall                  - fix issue where seldomly backbone connection was created through
                            freifunk network / freifunk gateway
wifi                      - use 802.11s meshing only (adhoc can not supported anymore)

2022-04-15 [8.0.3]
--------------------------------------------------
wifi                      - change ath10 firmware for more stable connection for Fritzbox 4040
                          - ath10k, disable dnyack (could be the reason for bad connections
                            speeds for IPQ4018 (fritzbox 4040)
                            Targets with this chip are not stable with openwrt.
                          - disable adhoc per default (which is not supported by some wifi
                            firmwares and is replaced with 802.11s)
openwrt                   - update to 21.02.2
network                   - add option to force ethernet port to 100mbit/s (only "big" routers)
LED                       - fix LED for xiaomi router


2022-04-00 [8.0.2]
--------------------------------------------------
usb-tethering             - add usb tethering for android/iOS (for selected devices)
gui-ajax                  - add info when using ajax request